# pdf-data-py

./: .gitignore  README.md  database.py  pdf_extractor.py  pyproject.toml  setup.py
pdf_data_viewer/: __init__.py  config.py  main.py
pdf_data_viewer/core/: __init__.py  annotation_handler.py  pdf_handler.py
pdf_data_viewer/database/: __init__.py  models.py
pdf_data_viewer/ui/: __init__.py  data_panel.py  dialogs.py  main_window.py  pdf_viewer.py
pdf_data_viewer/utils/: __init__.py  date_utils.py
