[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_data_viewer"
version = "1.0.1"
description = "A PDF viewer with data extraction capabilities"
readme = "README.md"
authors = [
    {name = "James Mete", email = "james@jamesmete.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.25.3",
    "pyside6>=6.8.2.1",
    "python-dateutil>=2.8.2",
]

[project.scripts]
pdf-data-viewer = "pdf_data_viewer.main:main"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
